<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="@string/info"
        app:title="@string/info">

        <Preference
            android:id="@+id/settings_data_source"
            android:icon="@drawable/ic_open_in_browser_black_24dp"
            android:key="@string/data_source"
            android:summary="@string/data_source_summary"
            android:title="@string/data_source" />

        <Preference
            android:id="@+id/settings_icon_design"
            android:icon="@drawable/ic_open_in_browser_black_24dp"
            android:key="@string/icon_design"
            android:title="@string/icon_design" />

        <Preference
            android:id="@+id/settings_implemented_by"
            android:icon="@drawable/ic_open_in_browser_black_24dp"
            android:key="@string/implemented_by"
            android:title="@string/implemented_by" />

        <Preference
            android:id="@+id/settings_open_source_licences"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:key="@string/software_licences"
            android:title="@string/software_licences" />

        <Preference
            android:id="@+id/settings_app_version"
            android:key="@string/app_version"
            android:title="@string/app_version" />

    </PreferenceCategory>
</PreferenceScreen>
